<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical">

    <View
        android:id="@+id/waybillItenDivider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/waybillPositionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:text="@string/waybill_position_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/waybillGoodsNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/waybill_goods_name_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/waybillGoodsNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/waybill_goods_number_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/waybillWaybillNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right|center_vertical"
            android:text="@string/waybill_waybill_number_text"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/waybillConsigneeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:text="@string/consignee_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/waybillConsigneePaidText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/consignee_paid_text"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/waybillItemDivider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />
</LinearLayout>