<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#41B1E2"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:gravity="center"
        android:text="@string/system_title"
        android:textColor="@color/white"
        android:textSize="34sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userNameIconLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/user_icon_description"
            app:srcCompat="@drawable/user"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/user_name_input_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textColorHint="@color/textInputHint"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/passwordIconLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/password_icon_description"
            app:srcCompat="@drawable/password"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textColorHint="@color/textInputHint"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:layout_weight="0"
        android:background="@drawable/button_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/login_button_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/exitButtonLogin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:layout_weight="0"
        android:background="@drawable/button_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/exit_button_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>