<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.qph.homework.view.EnterWaybillActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/departureStationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="15dp"
                    android:text="@string/departure_station_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/departureStationEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/departure_station_text_speakable"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:text="@string/departure_station_edit_text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textInputHint"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/arrivalStationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrival_station_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/arrivalStationEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:backgroundTint="@color/red"
                    android:ems="10"
                    android:hint="@string/arrival_station_edit_text_speakable"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textInputHint"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/consignorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consignor_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/consignorEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/consignor_edit_text_speakable"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textInputHint"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/consignorPhoneNumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consignor_phone_number_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/consignorPhoneNumberEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/consignor_phone_number_edit_text_speakable"
                    android:includeFontPadding="false"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textInputHint"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/consigneeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consignee_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/consigneeEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/consignee_edit_text_speakable"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textInputHint"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/consigneePhoneNumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consignee_phone_number_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/consigneePhoneNumberEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/consignee_phone_number_edit_text_speakable"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textInputHint"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/goodsNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_name_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/goodsNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:ems="10"
                    android:hint="@string/goods_name_edit_text_speakable"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textInputHint"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/goodsNumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_number_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/goodsNumberEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:ems="10"
                    android:hint="@string/goods_number_edit_text_speakable"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textInputHint"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/consignorPaidText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consignor_paid_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/consignorPaidEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/consignor_paid_edit_text_speakable"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textInputHint"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="15dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/consigneePaidText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consignee_paid_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/consigneePaidEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/consignee_paid_edit_text_speakable"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textInputHint"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <View
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/white"
      android:elevation="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/enterWaybillTurnBackButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/turn_back_button_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/enterWaybillSaveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/save_button_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</LinearLayout>