<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#41B1E2"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:gravity="center"
        android:text="@string/system_title"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userNameIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/user_icon_description"
            app:srcCompat="@drawable/user" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/user_name_input_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/password_icon_description"
            app:srcCompat="@drawable/password" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/login_button_text"
            android:textSize="20sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/exitButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/exit_button_text"
            android:textSize="20sp"
            app:backgroundTint="@null" />
    </LinearLayout>

    <TextView
        android:id="@+id/insiderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:gravity="center"
        android:maxLines="1"
        android:minHeight="48dp"
        android:text="@string/insider_knows_message_hint"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>